hphp/hack/test/typecheck/printf_opt_1.php.like_types.exp
File "printf_opt_1.php", line 23, characters 11-14:
Invalid argument (Typing[4110])
File "printf_opt_1.php", line 18, characters 18-37:
Expected ~FormatString<Dummy> because it is an unenforceable type
File "printf_opt_1.php", line 23, characters 11-14:
But got string
